hphp/hack/test/typecheck/splat/type_splat_illegal.php.exp
ERROR: File "type_splat_illegal.php", line 4, characters 37-44:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
ERROR: File "type_splat_illegal.php", line 4, characters 58-65:
Cannot use unstable feature: `type_splat` (Parsing[1002])
ERROR: File "type_splat_illegal.php", line 9, characters 38-45:
Cannot use unstable feature: `open_tuples` (Parsing[1002])
ERROR: File "type_splat_illegal.php", line 9, characters 59-66:
Cannot use unstable feature: `type_splat` (Parsing[1002])
ERROR: File "type_splat_illegal.php", line 9, characters 79-95:
Cannot use unstable feature: `type_splat` (Parsing[1002])
